removed licensed and replaced with registered

--- a/data/services/anxiety-support.json
+++ b/data/services/anxiety-support.json
@@ -23,7 +23,7 @@
           },
           {
             "title": "Experienced Anxiety Team",
-            "description": "Registered Licensed professionals with years of anxiety treatment expertise"
+            "description": "Registered professionals with years of anxiety treatment expertise"
           }
         ]
       },
